<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.lc8848.supervision.activity.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back_to_it"
            android:layout_width="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left"
            android:layout_height="15dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/about_app"
            />
    </LinearLayout>

    <ImageView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lc8848"/>
    <TextView
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/lc8848_it"
        />
    <TextView
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lc8848_name"
        />
    <View
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/font_black_4"/>

    <TextView
        android:layout_marginLeft="@dimen/activity_vertical_margin"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/lc8848_phone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lc8848_yewu"
            />
        <TextView
            android:id="@+id/yewu_number"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/lc8848_yewu_number"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lc8848_service"
        />
        <TextView
            android:id="@+id/service_number"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/lc8848_service_number"
        />
    </LinearLayout>
</LinearLayout>
