<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.tianditu.android.maps.MapView
            android:id="@+id/main_mapview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tag"
                android:text="@string/add_pic_tag"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_height="0.1dp"
            android:background="@color/font_black_4"/>
        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:text="@string/type"
                    android:textSize="16sp"
                    android:id="@+id/textView5" />
                <View
                    android:layout_width="0.1dp"
                    android:layout_margin="8dp"
                    android:layout_height="match_parent"
                    android:background="@color/font_black_4"/>
                <EditText
                    android:id="@+id/edit_type"
                    android:focusable="false"
                    android:textSize="16sp"
                    android:hint="@string/leixing"
                    android:layout_gravity="bottom"
                    android:drawableRight="@drawable/drop"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:layout_weight="1" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/font_black_4"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/select_town"
                    />
                <View
                    android:layout_width="0.1dp"
                    android:layout_margin="8dp"
                    android:layout_height="match_parent"
                    android:background="@color/font_black_4"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/spinner_town"
                        android:hint="@string/xiang"
                        android:background="@null"
                        android:focusable="false"
                        android:textSize="16sp"
                        android:drawableRight="@drawable/drop"
                        android:layout_gravity="bottom"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />
                    <View
                        android:id="@+id/show_line"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:visibility="gone"
                        android:layout_marginLeft="8dp"
                        android:background="@color/font_black_4"/>
                    <EditText
                        android:id="@+id/edit_town"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:textSize="16sp"
                        android:hint="@string/xiangz"
                        android:layout_gravity="bottom"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/font_black_4"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/isOrNot"
                    />
                <View
                    android:layout_width="0.1dp"
                    android:layout_margin="8dp"
                    android:layout_height="match_parent"
                    android:background="@color/font_black_4"/>
                <RadioGroup
                    android:id="@+id/rgisOrNot"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:gravity="left|center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbyes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        />
                    <RadioButton
                        android:id="@+id/rbno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/no" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/font_black_4"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/font_black_4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:text="@string/point_decs"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="0.1dp"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:background="@color/font_black_4"/>
            <EditText
                android:id="@+id/edit_desc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                android:hint="@string/miaoshu"
                android:minLines="2"
                android:background="@null"
                android:scrollbars="vertical"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:background="@color/font_black_4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                />
            <View
                android:layout_width="0.1dp"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:background="@color/font_black_4"/>
            <EditText
                android:id="@+id/edit_demo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="16sp"
                android:hint="@string/beizhu"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:background="@null"
                android:scrollbars="vertical"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/font_black_4"
            android:id="@+id/view" />

        <Button
            android:id="@+id/btn_save"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_button_style"
            android:text="@string/confirm_release"

            android:textColor="@android:color/white" />
    </LinearLayout>


</ScrollView>