<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_pwd"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lc8848.supervision.activity.UpdatePwdActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_to_setting"
            android:layout_width="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="密码修改"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/font_black_4"/>

    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="16sp"
        android:drawableLeft="@drawable/password"
        android:inputType="textPassword"
        android:background="@android:color/white"
        android:hint="@string/lastPwd"
        android:selectAllOnFocus="true"
        android:id="@+id/lastPassword"
        />

    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="16sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:hint="@string/newPwd"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/password"
        android:id="@+id/newPassword" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/divider_2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="16sp"
        android:background="@android:color/white"
        android:inputType="textPassword"
        android:hint="@string/renewPwd"
        android:selectAllOnFocus="true"
        android:drawableLeft="@drawable/password"
        android:id="@+id/reNewPassword" />
    <Button
        android:id="@+id/btn_update_save"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button_style"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/save"
        />

</LinearLayout>
